# ranch

./: .coveragerc  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: conf.py  gallery-examples.rst  index.rst  ranch.core.rst  ranch.filtering.rst  ranch.io.rst  ranch.learning.rst  ranch.models.rst  ranch.reduction.rst  ranch.rst  requirements.txt
examples/: .gitignore  basics.ipynb
examples/basics/: README.md
ranch/: __init__.py  structures.py
ranch/core/: _op.py  math.py  util.py
ranch/filtering/: morphology.py
ranch/io/: astro_cmap.pickle  io.py
ranch/learning/: splitting.py
ranch/models/: distribution.py  noise.py  peaks.py
ranch/reduction/: astro.py  stats.py
tests/reduction/: test_stats.py
