[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astro-ranch"
version = "0.1.0"
description = "An API to easily handle radio astronomy FITS files with Python."
authors = [
    "Lucas Einig"
]
readme = "README.md"

requires-python = ">=3.9,<3.10"

dependencies = [
    "numpy>=1.26.4,<2.0.0",
    "scipy>=1.14.0",
    "matplotlib>=3.8.0",
    "astropy>=6.1",
    "ipykernel>=6.29.3",
    "pre-commit>=3.6.2"
]

[project.optional-dependencies]
tests = [
    "flake8>=6.0.0",
    "black>=22.3.0",
    "isort>=5.12.0",
    "pydocstyle>=6.1.1",
    "pylint>=2.11.1",
]
dev = [
    "coverage-badge>=1.1.2",
    "pytest>=6.2.3",      # run the test suite
    "pytest-cov>=2.11.1", # generate coverage report see --cov --cov-report flags
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -vv --cov=gw_proc --cov-report=term-missing --cov-report=xml"
testpaths = ["tests"]

[tool.coverage.run]
source = ["ranch"]

# For other tools to be black compliant
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html
[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"

[project.urls]
Repository = "https://github.com/einigl/iram-30m-emir-obs-info"
